Community 30% + DailyQuiz Update 🙂

--- a/src/main/FrontEnd/package.json
+++ b/src/main/FrontEnd/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^2.1.10",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-context-menu": "^2.2.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-hover-card": "^1.1.2",
@@ -22,6 +23,7 @@
     "@radix-ui/react-navigation-menu": "^1.2.1",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-radio-group": "^1.2.1",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
@@ -29,6 +31,7 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@react-three/drei": "^9.114.0",
     "@react-three/fiber": "^8.17.8",
+    "axios": "^1.7.7",
     "cal-heatmap": "^4.2.4",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
