--- a/build.gradle
+++ b/build.gradle
@@ -31,16 +31,21 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'com.oracle.database.jdbc:ojdbc8:21.1.0.0'
+
+	// MySQL Connector
+	implementation 'mysql:mysql-connector-java:8.0.33'
+
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
-	implementation 'com.oracle.database.jdbc:ojdbc11:11.2.0.2.0'
+	// Hibernate
 	implementation 'org.hibernate.orm:hibernate-core:6.2.12.Final'
 }
+
 
 
 tasks.named('test') {
