--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 spring.application.name=LinguaGen
 debug=true
 server.port=8085
-spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
-spring.datasource.username=hr
-spring.datasource.password=hr
+
+# MySQL ?????? ??
+spring.datasource.url=jdbc:mysql://localhost:3306/project?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=1q2w3e4r!
+
+# JPA ? Hibernate ??
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
