--- a/src/main/FrontEnd/package.json
+++ b/src/main/FrontEnd/package.json
@@ -27,11 +27,13 @@
     "@radix-ui/react-radio-group": "^1.2.1",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slider": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.3",
     "@react-three/drei": "^9.114.0",
     "@react-three/fiber": "^8.17.8",
     "axios": "^1.7.7",
