--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ debug=true
 server.port=8085
 
 # MySQL ?????? ??
-spring.datasource.url=jdbc:mysql://localhost:3306/project?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=1q2w3e4r!
+spring.datasource.url=jdbc:mysql://project-db-stu3.smhrd.com:3307/Insa5_SpringA_final_3
+spring.datasource.username=Insa5_SpringA_final_3
+spring.datasource.password=aischool3
 
 # JPA ? Hibernate ??
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
