--- a/src/main/FrontEnd/package.json
+++ b/src/main/FrontEnd/package.json
@@ -34,6 +34,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@react-oauth/google": "^0.12.1",
     "@react-three/drei": "^9.114.0",
     "@react-three/fiber": "^8.17.8",
     "axios": "^1.7.7",
