--- a/src/main/FrontEnd/package.json
+++ b/src/main/FrontEnd/package.json
@@ -43,6 +43,7 @@
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.3.0",
+    "framer-motion": "^11.11.9",
     "lucide-react": "^0.447.0",
     "random-words": "^2.0.1",
     "react": "^18.2.0",
