--- a/src/main/FrontEnd/package.json
+++ b/src/main/FrontEnd/package.json
@@ -42,12 +42,14 @@
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^11.11.9",
     "lucide-react": "^0.447.0",
     "random-words": "^2.0.1",
     "react": "^18.2.0",
     "react-calendar-heatmap": "^1.9.0",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
