--- a/src/main/FrontEnd/package.json
+++ b/src/main/FrontEnd/package.json
@@ -35,8 +35,9 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@react-oauth/google": "^0.12.1",
-    "@react-three/drei": "^9.114.0",
-    "@react-three/fiber": "^8.17.8",
+    "@react-three/drei": "^9.78.2",
+    "@react-three/fiber": "^8.13.5",
+    "@react-three/postprocessing": "^2.14.13",
     "axios": "^1.7.7",
     "cal-heatmap": "^4.2.4",
     "class-variance-authority": "^0.7.0",
@@ -60,7 +61,7 @@
     "styled-components": "^6.1.13",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.169.0",
+    "three": "^0.154.0",
     "zod": "^3.23.8",
     "zustand": "^5.0.0-rc.2"
   },
