--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint  --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -17,8 +17,10 @@
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
+    "@radix-ui/react-collapsible": "^1.1.1",
     "@radix-ui/react-context-menu": "^2.2.2",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-hover-card": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
@@ -38,6 +40,7 @@
     "@react-three/drei": "^9.78.2",
     "@react-three/fiber": "^8.13.5",
     "@react-three/postprocessing": "^2.16.3",
+    "@tanstack/react-query": "^5.59.16",
     "axios": "^1.7.7",
     "cal-heatmap": "^4.2.4",
     "class-variance-authority": "^0.7.0",
@@ -54,6 +57,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.26.2",
     "react-tooltip": "^5.28.0",
     "react-type-animation": "^3.2.0",
@@ -77,6 +81,6 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
-    "vite": "^5.4.10"
+    "vite": "^5.4.9"
   }
 }
