--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -60,6 +60,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.26.2",
     "react-tooltip": "^5.28.0",
+    "react-transition-group": "^4.4.5",
     "react-type-animation": "^3.2.0",
     "recharts": "^2.13.0",
     "styled-components": "^6.1.13",
