--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -57,6 +57,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
+    "react-lottie": "^1.2.4",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.26.2",
     "react-tooltip": "^5.28.0",
