--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -17,5 +17,8 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.com.linguagen=DEBUG
 
+# OPEN_API_KEY ???? ??
+openai.api.key=${OPENAI_API_KEY}
+
 #cors ??
 app.cors.allowed-origin=http://localhost:5173
