커스텀 문제 생성 초안

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,6 +11,10 @@ spring.datasource.password=aischool3
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.id.new_generator_mappings=true
+
+# ??? ??? ?? SQL ?? ??
+spring.jpa.properties.hibernate.hql.bulk_id_strategy=org.hibernate.hql.spi.id.inline.InlineIdsInClauseBulkIdStrategy
 
 # Logging Configuration
 logging.level.org.hibernate.SQL=DEBUG
@@ -19,6 +23,10 @@ logging.level.com.linguagen=DEBUG
 
 # OPEN_API_KEY ???? ??
 openai.api.key=${OPENAI_API_KEY}
+openai.api.timeout=120
+openai.api.maxRetries=3
 
 #cors ??
 app.cors.allowed-origin=http://localhost:5173
+
+logging.level.com.linguagen.backend.service=DEBUG
