--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -48,6 +48,9 @@ dependencies {
 
 	// OpenAI 공식 Java 클라이언트
 	implementation 'com.theokanning.openai-gpt3-java:service:0.18.2'
+
+	// Validation
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
 
 
