--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@headlessui/react": "^2.1.10",
     "@hookform/resolvers": "^3.9.0",
+    "@lottiefiles/react-lottie-player": "^3.5.4",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
@@ -36,6 +37,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@react-native-firebase/admob": "^11.5.0",
     "@react-oauth/google": "^0.12.1",
     "@react-three/drei": "^9.78.2",
     "@react-three/fiber": "^8.13.5",
