이미지 업로드

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -30,3 +30,5 @@ openai.api.maxRetries=3
 app.cors.allowed-origin=http://localhost:5173
 
 logging.level.com.linguagen.backend.service=DEBUG
+
+file.upload-dir=src/main/resources/static/uploads
