--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -30,3 +30,13 @@ openai.api.maxRetries=3
 app.cors.allowed-origin=http://localhost:5173
 
 logging.level.com.linguagen.backend.service=DEBUG
+
+server.servlet.session.cookie.same-site=lax
+server.servlet.session.cookie.http-only=true
+server.servlet.session.tracking-modes=cookie
+spring.session.store-type=none
+server.servlet.session.timeout=30m
+
+# Header Exposure
+spring.mvc.expose-session-attributes=true
+
