문제 생성스케쥴링,챗봇 나의 프로필조회기능

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -40,3 +40,6 @@ server.servlet.session.timeout=30m
 # Header Exposure
 spring.mvc.expose-session-attributes=true
 
+#  순환 참조를 허용
+spring.main.allow-circular-references=true
+
