--- a/frontEnd/.env.production
+++ b/frontEnd/.env.production
@@ -1,3 +1,4 @@
 # .env.production
-VITE_APP_API_BASE_URL=http://localhost:8085.com/api
+VITE_APP_API_BASE_URL=http://backend:8085.com/api
+VITE_APP_BASE_URL=http://backend:8085.com/
 # 서버 배포 시 https://도메인 주소/api로 변경
