--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 spring.application.name=LinguaGen
-debug=true
 server.port=8085
 
 # MySQL ?????? ??
@@ -10,7 +9,9 @@ spring.datasource.password=aischool3
 # JPA ? Hibernate ??
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+# 2024-11-16 22:36:42 backend-1          | Hibernate: select g1_0.idx,g1_0.exp,g1_0.grade,g1_0.tier,g1_0.updated_at,g1_0.user_id from grade g1_0 where g1_0.user_id=? # SQL: True
+# 2024-11-16 22:36:42 backend-1          | 2024-11-16T13:36:42.607Z DEBUG 1 --- [LinguaGen] [nio-8085-exec-2] org.hibernate.SQL  : select g1_0.idx,g1_0.exp,g1_0.grade,g1_0.tier,g1_0.updated_at,g1_0.user_id from grade g1_0 where g1_0.user_id=?
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.id.new_generator_mappings=true
 
 # ??? ??? ?? SQL ?? ??
@@ -18,8 +19,9 @@ spring.jpa.properties.hibernate.hql.bulk_id_strategy=org.hibernate.hql.spi.id.in
 
 # Logging Configuration
 logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.hibernate.orm.jdbc.bind=TRACE
 logging.level.com.linguagen=DEBUG
+logging.level.com.linguagen.backend.service=DEBUG
 
 # OPEN_API_KEY ???? ??
 openai.api.key=${OPENAI_API_KEY}
@@ -28,8 +30,6 @@ openai.api.maxRetries=3
 
 #cors ??
 app.cors.allowed-origin=http://localhost:5173
-
-logging.level.com.linguagen.backend.service=DEBUG
 
 server.servlet.session.cookie.same-site=lax
 server.servlet.session.cookie.http-only=true
@@ -42,4 +42,6 @@ spring.mvc.expose-session-attributes=true
 
 #  순환 참조를 허용
 spring.main.allow-circular-references=true
+# 컨디셔널 레포트 출력 제거
+spring.main.log-startup-info=false
 
