--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -28,8 +28,11 @@ openai.api.key=${OPENAI_API_KEY}
 openai.api.timeout=120
 openai.api.maxRetries=3
 
+spring.redis.host=${SPRING_REDIS_HOST}
+spring.redis.port=${SPRING_REDIS_PORT}
+
 #cors ??
-app.cors.allowed-origin=http://localhost:5173
+app.cors.allowed-origin=https://linguagen.site,http://linguagen.site,http://localhost:5173,http://linguagen.site:5173
 
 server.servlet.session.cookie.same-site=lax
 server.servlet.session.cookie.http-only=true
