--- a/frontEnd/nginx.conf
+++ b/frontEnd/nginx.conf
@@ -1,6 +1,13 @@
 server {
     listen       5173;
-    server_name  localhost;
+    server_name  linguagen.site;
+
+    location /api/ {
+        proxy_pass http://backend:8085; # 백엔드 컨테이너로 프록시
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
 
     location / {
         root   /usr/share/nginx/html;
