--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -30,6 +30,8 @@ openai.api.maxRetries=3
 
 spring.redis.host=${SPRING_REDIS_HOST}
 spring.redis.port=${SPRING_REDIS_PORT}
+spring.redis.password=Linguagen1234
+spring.redis.timeout=6000
 
 #cors ??
 app.cors.allowed-origin=https://linguagen.site,http://linguagen.site,http://localhost:5173,http://linguagen.site:5173
@@ -47,4 +49,9 @@ spring.mvc.expose-session-attributes=true
 spring.main.allow-circular-references=true
 # 컨디셔널 레포트 출력 제거
 spring.main.log-startup-info=false
+
+# 캐시 설정
+spring.cache.type=redis
+spring.cache.redis.time-to-live=1800000
+spring.cache.redis.cache-null-values=true
 
