--- a/frontEnd/.env.production
+++ b/frontEnd/.env.production
@@ -1,4 +1,3 @@
-# .env.production
-# VITE_APP_API_BASE_URL=http://localhost:8085.com/api # 서버 배포 시 https://도메인 주소/api로 변경
-VITE_APP_API_BASE_URL=http://localhost:8085/api # 배포 안했을경우
-
+VITE_APP_API_BASE_URL=http://backend:8085/api
+VITE_APP_BASE_URL=http://backend:8085
+VITE_APP_IMP_KEY=imp05218310
